# lizz

./: .gitignore  lizz.cabal
src/Lizz/: Format.hs  Internal.hs  Parser.hs  Utils.hs
tests/Lizz/: Tests.hs  input.txt
