cabal-version:       >=1.10

name:                lizz
version:             0.1.0.0

license-file:        LICENSE
author:              Nicholas
maintainer:          me@cheeze2000.net

build-type:          Simple

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Lizz.Format
                   , Lizz.Internal
                   , Lizz.Parser
                   , Lizz.Utils
  build-depends:     base

test-suite lizz-tests
  default-language:  Haskell2010
  type:              detailed-0.9
  hs-source-dirs:    src, tests
  test-module:       Lizz.Tests
  other-modules:     Lizz.Format
                   , Lizz.Internal
                   , Lizz.Parser
                   , Lizz.Utils
  build-depends:     base, Cabal
